Add k8s applications to brewfile

--- a/setup/macos/Brewfile
+++ b/setup/macos/Brewfile
@@ -29,15 +29,18 @@ brew "gotop"
 brew "htop"
 brew "httpie"
 brew "hyperfine"
+brew "hyperkit"
 brew "jq"
 brew "k9s"
 brew "kubectx"
 brew "kubernetes-cli"
+brew "kubernetes-helm"
 brew "lighttpd"
 brew "llvm"
 brew "marp-cli"
 brew "mas"
 brew "mawk"
+brew "minikube"
 brew "neofetch"
 brew "neovim"
 brew "nmap"
@@ -49,7 +52,9 @@ brew "ranger"
 brew "rename"
 brew "ripgrep"
 brew "rust"
+brew "rustup"
 brew "shellcheck"
+brew "skaffold"
 brew "speedtest-cli"
 brew "starship"
 brew "stow"
@@ -88,6 +93,7 @@ cask "font-source-serif-pro"
 cask "font-space-mono"
 cask "font-victor-mono-nerd-font"
 cask "google-cloud-sdk"
+cask "golang"
 cask "iina"
 cask "iterm2"
 cask "meld"
