--- a/alacritty/alacritty/alacritty.yml
+++ b/alacritty/alacritty/alacritty.yml
@@ -28,10 +28,32 @@ font:
   scale_with_dpi: true
 
 mouse:
-  url:
-    launcher:
-      program: open
-    modifiers: Command
+  hide_when_typing: true
+
+hints:
+  enabled:
+   - regex: "(ipfs:|ipns:|magnet:|mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)\
+             [^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
+     command: open
+     post_processing: true
+     mouse:
+       enabled: true
+       mods: None
+     binding:
+       key: U
+       mods: Control|Shift
+
+  enabled:
+  - regex: "(intsights\\-)\
+             [^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
+    action: Copy
+    post_processing: true
+    mouse:
+      enabled: true
+      mods: None
+    binding:
+      key: S
+      mods: Control|Shift
 
 debug:
   log_level: info
