tmux config improvement
- Remove tpm and all plugins which I rarely use
- Start tmux session management with tmuxp
- Improve key-bindings

--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -31,15 +31,26 @@ bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
+# vim-like pane switching
+# Starting to test those keybindings to give up seamleass panes switching with vim to release global C-hjkl bindings
+bind -r ^ last-window
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
 # pane movement
-bind j command-prompt -p "join pane from:"  "join-pane -s '%%'"
-bind s command-prompt -p "send pane to:"  "join-pane -t '%%'"
+# bind C-j command-prompt -p "join pane from:"  "join-pane -s '%%'"
+# bind C-s command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
 # Easier remember to split the pane with - and \
 # doesn't override default (prefix ") and (prefix &)
 bind \\ split-window -h -c "#{pane_current_path}"
 bind - split-window -c "#{pane_current_path}"
+
 bind c new-window -c "#{pane_current_path}"
+
+bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/personal/todo.md"
 
 # visual notification of activity in other windows
 setw -g monitor-activity on
@@ -58,20 +69,7 @@ set -g pane-base-index 1
 # Prevent auto window rename
 set-option -g allow-rename off
 
-bind U run "cut -c3- ~/.tmux.conf | sh -s _urlview #{pane_id}"
 
-##====== START THE STATUS BAR =============#
 source-file $HOME/.config/tmux/tmux-status.conf
-# List of plugins
-  set -g monitor-activity on
-# Supports `github_username/repo` or full git repo URLs
-  set-environment -g TMUX_PLUGIN_MANAGER_PATH '$HOME/.config/tmux/plugins/'
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-fpp'
-set -g @plugin 'tmux-plugins/tmux-urlview'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '$HOME/.config/tmux/plugins/tpm/tpm'
+set -g monitor-activity on
