--- a/alacritty/alacritty/alacritty.yml
+++ b/alacritty/alacritty/alacritty.yml
@@ -11,18 +11,15 @@ scrolling:
   history: 100000
   multiplier: 3
 font:
-  # normal:
-  #   family: FiraCode Nerd Font Mono
-  #   style: Light
-  # bold:
-  #   family: FiraCode Nerd Font Mono
-  #   style: Bold
-  # italic:
-  #   family: FiraCode Nerd Font Mono
-  #   style: Bold Italic
   normal:
-    family: Hack Nerd Font
-    style: Regular
+    family: FiraCode Nerd Font
+    style: Light
+  bold:
+    family: FiraCode Nerd Font
+    style: Bold
+  italic:
+    family: FiraCode Nerd Font
+    style: Bold Italic
   size: 14.0
   use_thin_strokes: true
   scale_with_dpi: true
@@ -42,18 +39,6 @@ hints:
      binding:
        key: U
        mods: Control|Shift
-
-  enabled:
-  - regex: "(intsights\\-)\
-             [^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
-    action: Copy
-    post_processing: true
-    mouse:
-      enabled: true
-      mods: None
-    binding:
-      key: S
-      mods: Control|Shift
 
 debug:
   log_level: info
