--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -17,7 +17,7 @@
     precomposeunicode = false
 
     editor = 'nvim'
-    pager = diff-so-fancy | less --tabs=4 -RFX
+    ; pager = diff-so-fancy | less --tabs=4 -RFX
 
 	# Speed up some repositories.
 	commitGraph = true
